Fixing visibility of Streams_chat_unseen

--- a/platform/plugins/Streams/web/css/Streams.css
+++ b/platform/plugins/Streams/web/css/Streams.css
@@ -855,8 +855,9 @@
 	display: block;
 }
 .Streams_preview_tool .Streams_chat_unseen {
-	top: 50%;
-	transform: translateY(-50%);
+	bottom: 5px;
+	right: 5px;
+	z-index: 99999;
 	display: none;
 	position: absolute;
 	border-radius: 50%;
@@ -869,5 +870,4 @@
 	line-height: 30px;
 	vertical-align: middle;
 	background-color: #cc5555;
-	right: 10px;
 }
